--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script async src="script.js"></script>
   </head>
   <body>
+    <div class="heading"><p><h1>CALENDAR</h1></p></div>
     <div id="cal-wrap">
       <!-- (A) PERIOD SELECTOR -->
       <div id="cal-date">
