--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Calendar</title>
     <link href="style.css" rel="stylesheet">
     <script async src="script.js"></script>
+    <script src="https://kit.fontawesome.com/2dfc32c7e6.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="heading"><p><h1>CALENDAR</h1></p></div>
+    <div class="heading"><p><h1><u>CALENDAR</u></h1></p></div>
     <div id="cal-wrap">
       <!-- (A) PERIOD SELECTOR -->
       <div id="cal-date">
@@ -27,5 +28,17 @@
         <input id="evt-save" type="submit" value="Save"/>
       </form>
     </div>
+    <!--(D) Footer-->
+    <footer id="footer">
+      <h2>ABOUT ME</h2>
+      <h4>ECE student at USICT</h4>
+      <a href="https://www.github.com/Yuvraj004" target="_blank">
+        <i class="fa-brands fa-github fa-3x"></i>
+      </a>
+      <a href="mailto:yuvrajchat@gmail.com" target="_blank">
+        <i class="fa-solid fa-at fa-3x"></i>
+      </a>
+    </footer>
   </body>
+  
 </html>
