--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <script src="https://kit.fontawesome.com/2dfc32c7e6.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="heading"><p><h1><u>CALENDAR</u></h1></p></div>
+    <nav id="heading">
+      <p><h1>CALENDAR</h1></p>
+    </nav>
     <div id="cal-wrap">
       <!-- (A) PERIOD SELECTOR -->
       <div id="cal-date">
