--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <script src="https://kit.fontawesome.com/2dfc32c7e6.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <nav id="heading">
-      <p><h1>CALENDAR</h1></p>
+    <nav class="navbar bg-light container">
+      <!-- <img src="Untitled.png">
+      <h1>CALENDAR</h1>        -->
     </nav>
     <div id="cal-wrap">
       <!-- (A) PERIOD SELECTOR -->
