--- a/index.html
+++ b/index.html
@@ -5,11 +5,39 @@
     <link href="style.css" rel="stylesheet">
     <script async src="script.js"></script>
     <script src="https://kit.fontawesome.com/2dfc32c7e6.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar bg-light container">
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"> EVENT CALENDAR</a><i class="fa fa-calendar" aria-hidden="true"></i>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          </ul>
+          <span class="navbar-text">
+            ECE student at USICT&nbsp;
+            <a href="https://www.github.com/Yuvraj004" target="_blank">
+              <i class="fa-brands fa-github fa-2x"></i>
+            </a>&nbsp;
+            <a href="mailto:yuvrajchat@gmail.com" target="_blank">
+              <i class="fa-solid fa-at fa-2x"></i>
+            </a>
+          </span>
+        </div>
+      </div>
       <!-- <img src="Untitled.png">
       <h1>CALENDAR</h1>        -->
+      <!-- <h2>ABOUT ME</h2>
+      <h4>ECE student at USICT</h4>
+      <a href="https://www.github.com/Yuvraj004" target="_blank">
+        <i class="fa-brands fa-github fa-3x"></i>
+      </a>
+      <a href="mailto:yuvrajchat@gmail.com" target="_blank">
+        <i class="fa-solid fa-at fa-3x"></i>
+      </a> -->
     </nav>
     <div id="cal-wrap">
       <!-- (A) PERIOD SELECTOR -->
@@ -33,14 +61,7 @@
     </div>
     <!--(D) Footer-->
     <footer id="footer">
-      <h2>ABOUT ME</h2>
-      <h4>ECE student at USICT</h4>
-      <a href="https://www.github.com/Yuvraj004" target="_blank">
-        <i class="fa-brands fa-github fa-3x"></i>
-      </a>
-      <a href="mailto:yuvrajchat@gmail.com" target="_blank">
-        <i class="fa-solid fa-at fa-3x"></i>
-      </a>
+      
     </footer>
   </body>
   
