--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Calendar</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="style.css" rel="stylesheet">
     <script async src="script.js"></script>
     <script src="https://kit.fontawesome.com/2dfc32c7e6.js" crossorigin="anonymous"></script>
